# unimail-py-sdk

./: .gitignore  README.md  README_zh.md  pyproject.toml
tests/: client.py
unimail_py_sdk/: Client.py  __init__.py
