[tool.poetry]
name = "unimail-py-sdk"
version = "0.0.3"
description = "This is a Python SDK for Unimail. Quickly integrate into your project"
authors = ["i-curve <i-curve@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
